<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="facebook_app_id">248045086948204</string>
    <string name="fb_login_protocol_scheme">fb248045086948204</string>
    <string name="add_currency">Add Currency</string>
    <string name="selected">Selected</string>
    <string name="currency_list">Currency List</string>
    <string name="copied_to_clipboard">Results copied to the clipboard</string>
    <string name="support">"Support"</string>
    <string name="support_title">"Support\n========="</string>
    <string name="support_desc">"If you're having an issue with our app, please email to info@currency.wiki and in the subject line, please add \"Issue with app\"\n\nPlease describe the issue and include your phone's brand name, model, and current android version.\nYou can find the current version by going to (Settings > About phone > Software information) and look for the android version.\n\nExample: Samsung S9+ Android 10\n\nPlease allow 24-48 hours for a response!\n\n\nHow to add widget?\n====================\n\n1: On your home screen, touch and hold an empty spot.\n2: Tap on "Widgets"\n3: In the search box, type "CurrencyConverter" and it should display a currency widget.\n4: You tap on the widget, and it will prompt you to select the type of widget you want to display by holding and dragging to your home screen."</string>
    <string name="terms_conditions">"Terms"</string>
    <string name="terms_conditions_title">"Terms\n======="</string>
    <string name="privacy_policy">"Privacy Policy"</string>
    <string name="monetary_format">Monetary Format</string>
    <string name="monetary_format_1">1,234.56</string>
    <string name="monetary_format_2">1.234,56</string>
    <string name="monetary_format_3">1 234.56</string>
    <string name="monetary_format_4">1 234,56</string>
    <string name="decimal_format">Decimal Format</string>
    <string name="decimal_format_1">.02</string>
    <string name="decimal_format_2">.003</string>
    <string name="decimal_format_3">.0004</string>
    <string name="decimal_format_4">.00005</string>
    <string name="decimal_format_5">.000006</string>
    <string name="decimal_format_6">"Don't Show"</string>
    <string name="rate_the_app">Please rate our free app!</string>
    <string name="rate_app_desc">Tap on stars and \"Open With\nGoogle Play Store\" to rate</string>
    <string name="not_now">NOT NOW</string>
    <string name="add_widget">Add widget</string>
</resources>