<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DecimalSettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container_view"
        android:background="#8c6ef2"
        android:orientation="vertical"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16">

                <androidx.appcompat.widget.AppCompatTextView
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="Updated: 08/23/2020"
                    android:layout_centerVertical="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14"
                    android:layout_centerInParent="true"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="5"/>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/btn_share"
                            android:layout_width="@dimen/tab_bar_height"
                            android:layout_height="@dimen/tab_bar_height"
                            android:background="?attr/selectableItemBackground"
                            android:scaleType="centerInside"
                            android:paddingLeft="@dimen/dp_15"
                            android:paddingRight="@dimen/dp_20"
                            android:paddingTop="@dimen/dp_20"
                            android:paddingBottom="@dimen/dp_20"
                            android:layout_centerVertical="true"
                            android:layout_centerInParent="true"
                            android:src="@drawable/btn_share"/>

                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>
            
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_36"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_36"
                android:layout_gravity="center"
                android:text="123,456.0"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_weight=".5"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_8">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_monetary_format"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_18"
                        android:text="@string/monetary_format"
                        android:layout_marginBottom="@dimen/dp_24"/>

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chk_monetary_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_12"
                        android:text="@string/monetary_format_1"
                        android:paddingLeft="@dimen/dp_8"
                        android:textSize="@dimen/sp_30"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:button="@drawable/ic_checkbox"
                        android:checked="true"/>

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chk_monetary_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_12"
                        android:text="@string/monetary_format_2"
                        android:paddingLeft="@dimen/dp_8"
                        android:textSize="@dimen/sp_24"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:button="@drawable/ic_checkbox"
                        android:checked="false"/>

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chk_monetary_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_12"
                        android:text="@string/monetary_format_3"
                        android:paddingLeft="@dimen/dp_8"
                        android:textSize="@dimen/sp_19"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:button="@drawable/ic_checkbox"
                        android:checked="false"/>

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chk_monetary_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_12"
                        android:text="@string/monetary_format_4"
                        android:paddingLeft="@dimen/dp_8"
                        android:textSize="@dimen/sp_19"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:button="@drawable/ic_checkbox"
                        android:checked="false"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_16"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_8">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_decimal_format"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_18"
                        android:text="@string/decimal_format"
                        android:layout_marginBottom="@dimen/dp_24"/>

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chk_decimal_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_12"
                        android:text="@string/decimal_format_1"
                        android:paddingLeft="@dimen/dp_8"
                        android:textSize="@dimen/sp_19"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:button="@drawable/ic_checkbox"
                        android:checked="true"/>

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chk_decimal_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_12"
                        android:text="@string/decimal_format_2"
                        android:paddingLeft="@dimen/dp_8"
                        android:textSize="@dimen/sp_19"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:button="@drawable/ic_checkbox"
                        android:checked="false"/>

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chk_decimal_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_12"
                        android:text="@string/decimal_format_3"
                        android:paddingLeft="@dimen/dp_8"
                        android:textSize="@dimen/sp_19"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:button="@drawable/ic_checkbox"
                        android:checked="false"/>

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chk_decimal_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_12"
                        android:text="@string/decimal_format_4"
                        android:paddingLeft="@dimen/dp_8"
                        android:textSize="@dimen/sp_19"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:button="@drawable/ic_checkbox"
                        android:checked="false"/>

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chk_decimal_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_12"
                        android:text="@string/decimal_format_5"
                        android:paddingLeft="@dimen/dp_8"
                        android:textSize="@dimen/sp_19"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:button="@drawable/ic_checkbox"
                        android:checked="false"/>

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chk_decimal_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_12"
                        android:text="@string/decimal_format_6"
                        android:paddingLeft="@dimen/dp_8"
                        android:textSize="@dimen/sp_19"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:button="@drawable/ic_checkbox"
                        android:checked="false"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>