<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_pink_gradient"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/selected"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="@dimen/sp_22"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/selectedCurrencyList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constrainedHeight="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_max="@dimen/dp_300"
                app:layout_constraintHeight_min="@dimen/dp_100"
                app:layoutManager="LinearLayoutManager"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_currency_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/currency_list"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="@dimen/sp_22"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/currencyList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_gravity="right"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:text="@string/add_widget"
        android:textSize="@dimen/sp_18"/>

</LinearLayout>